--- a/lab1/styleme.css
+++ b/lab1/styleme.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
 body{
-	background-color: rgb(89, 86, 71);
-	color: white;
+	background-color: darkgrey;
+	color: darkred;
 	font-family: Georgia;
 }
 h3{
@@ -11,7 +11,7 @@ h3{
 	font-family: Verdana;	
 }
 h1{
-	color: rgb(153, 217, 234);
+	color: darkblue;
 	font-family: "Arial Black";
 }
 span{
@@ -20,10 +20,26 @@ span{
 	font-family: Courier;
 	font-style: italic;
 }
-.hline { width:100%; height:1px; background: white; }
-a.highlight:link{
-	color: rgb(89, 86, 71);
+a.color{
+	color: blueviolet;
 }
-a.highlight:hover{
-	color: blue;
+a:link{
+	text-decoration: none;
 }
+a:hover{
+	text-decoration: underline;
+}
+div.drop:first-letter{
+	font-size: 20px;
+}
+dt{
+	color: green;
+}
+dd{
+	color: whitesmoke;
+}
+ol {
+	display: flex;
+	flex-direction: column-reverse;
+}
+
